<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/action_discard"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom"/>
    
</menu>