<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_patrol_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                style="@style/PatrolUploadItemOuterContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:visibility="gone"
                android:background="@drawable/common_rectangle_with_shadow"
                android:orientation="vertical">

                <com.augurit.agmobile.gzps.common.widget.FlexRadioGroup
                    android:id="@+id/rg_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    app:flexWrap="wrap">

                    <CheckBox
                        android:id="@+id/rb_component_not_exist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="设施不存在"
                        android:textColor="@color/dust_grey" />

                </com.augurit.agmobile.gzps.common.widget.FlexRadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                </RadioGroup>

            </LinearLayout>

            <com.augurit.agmobile.gzpssb.common.view.MultiTakePhotoTableItem
                android:id="@+id/take_photo_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:photoText="添加照片" />

            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/common_rectangle_with_shadow"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"
                    android:text="如发现位置信息有误，请修改"
                    android:textColor="@color/dust_grey"
                    android:textSize="@dimen/partrol_upload_text_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/grey_dot_line"
                    android:layerType="software" />

                <com.augurit.agmobile.gzps.common.widget.TextItemTableItem
                    android:id="@+id/textitem_facility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textViewName="设  施" />

                <LinearLayout
                    android:id="@+id/ll_address_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical" />

            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/common_rectangle_with_shadow"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/ll_glzt_containt"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:orientation="horizontal">
                    <!--文本框 -->
                    <TextView
                        style="@style/PatrolUploadKeyTextStyle"
                        android:text="@string/manage_state"
                        android:textColor="#FF666666"
                        android:textSize="@dimen/partrol_upload_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/cb_inner_city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/inner_city" />

                            <CheckBox
                                android:id="@+id/cb_dont_know_where"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dont_know_where" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/cb_others"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="其他" />

                            <EditText
                                android:id="@+id/et_others"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/patrol_upload_view_margin_left"
                                android:layout_marginRight="8dp"
                                android:hint=""
                                android:maxLength="20"
                                android:visibility="gone"
                                android:enabled="false"/>

                            <com.augurit.am.cmpt.widget.spinner.AMSpinner
                                android:id="@+id/spinner_others"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_marginLeft="@dimen/patrol_upload_view_margin_left"
                                android:layout_marginRight="8dp"
                                android:visibility="gone"/>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_problems_container_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/common_rectangle_with_shadow"
                android:clickable="false"
                android:orientation="vertical"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_tv1"
                        style="@style/PatrolUploadKeyTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <!--文本框 -->
                        <TextView
                            android:id="@+id/tv_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="设施问题"
                            android:textColor="@color/dust_grey"
                            android:textSize="@dimen/partrol_upload_text_size"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/tv_reset_problems"
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            android:layout_marginBottom="4dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/sel_btn_upload"
                            android:text="重置"
                            android:textColor="@color/white"
                            android:textSize="@dimen/partrol_upload_text_size" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/grey_dot_line"
                        android:layerType="software" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/ll_problems_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/patrol_upload_view_margin_left"
                        android:layout_marginTop="8dp"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        app:flexWrap="wrap" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_drainage_entity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/common_rectangle_with_shadow"
                android:clickable="false"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/PatrolUploadKeyTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <!--文本框 -->
                        <TextView
                            android:id="@+id/tv_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="排水户"
                            android:textColor="#FF666666"
                            android:textSize="@dimen/partrol_upload_text_size" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/btn_add_drainage_entity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_2"
                            android:text="添加" />

                        <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="top"-->
                        <!--android:text="*"-->
                        <!--android:textColor="@android:color/holo_red_light"-->
                        <!--android:textSize="@dimen/text_size_third"-->
                        <!--android:visibility="visible" />-->
                    </LinearLayout>


                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/ll_drainage_entity_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/patrol_upload_view_margin_left"
                        android:layout_marginTop="8dp"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        app:flexWrap="wrap" />

                </LinearLayout>
            </LinearLayout>


            <!--标识描述-->
            <LinearLayout
                android:id="@+id/ll_textitem_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/common_rectangle_with_shadow"
                android:orientation="vertical">

                <com.augurit.agmobile.gzps.common.widget.TextFieldTableItem
                    android:id="@+id/textitem_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fieldeditMaxLength="200"
                    app:fieldtextViewName="上报说明" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/common_rectangle_with_shadow"
                android:orientation="vertical">

                <com.augurit.agmobile.gzps.common.widget.TextItemTableItem
                    android:id="@+id/tableitem_current_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textViewName="上报人" />

                <com.augurit.agmobile.gzps.common.widget.TextItemTableItem
                    android:id="@+id/tableitem_current_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:textViewName="上报时间" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_upload_journal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/sel_btn_upload"
                android:text="提交"
                android:textColor="@color/agmobile_white"
                android:textSize="@dimen/text_size_first" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>